fdo#46687 - fix find toolbar X error handling